# liberasure

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .travis.yml  AUTHORS  BUILD  CMakeLists.txt  Config  README.md  WORKSPACE  build_markdown.sh  preprocess_markdown.py
CMake/: assert_build_fails.cmake
cmake/modules/: assert_build_fails.cmake
debug/: atom.hpp  demangle.hpp  instrumented.hpp  unique_string.hpp
erasure/: erasure.hpp  meta.hpp  small_buffer.hpp  unique_storage_ptr.hpp
erasure/feature/: callable.hpp  dereferenceable.hpp  equality_comparable.hpp  less_than_comparable.hpp  ostreamable.hpp  regular.hpp  value_equality_comparable.hpp
erasure/features/: callable.hpp  dereferencable.hpp  equality_comparable.hpp  ostreamable.hpp  regular.hpp  value_equality_comparable.hpp  visitable.hpp
examples/: BUILD  CMakeLists.txt  comparisons.hpp  comparisons_example.cpp  type_erasure_example.cpp
include/debug/: atom.hpp  demangle.hpp  instrumented.hpp
include/erasure/: erasure.hpp  meta.hpp  small_buffer.hpp
include/erasure/feature/: callable.hpp  dereferencable.hpp  equality_comparable.hpp  less_than_comparable.hpp  ostreamable.hpp  regular.hpp  value_equality_comparable.hpp  visitable.hpp
lectures/: add_to_ref.cpp  hand_rolled_union.cpp  lecture_08.cpp  lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_05.cpp  lesson_06.cpp  lesson_07.cpp  lesson_09.cpp  lesson_10.cpp  lesson_10_elevator_constant.input  literals.cpp  literals.hpp  mixin_fun.cpp  seeding.cpp  type_cmp.cpp  type_cmp.hpp  type_cmp1.cpp  unsigned_property.hpp
lectures/lecture_4_ptrargs/: ptrargs.cpp  ptrargs.h  ptrargs1.cpp
lesson_plan/: lesson_11.cpp
old-irrelevant-stuff/: comparisons.hpp  comparisons_example.cpp
old-irrelevant-stuff/debug/: instrumented.hpp
old-irrelevant-stuff/lectures/: hand_rolled_union.cpp  lesson_01.cpp  lesson_02.cpp  lesson_03.cpp  lesson_04.cpp  lesson_10_elevator_array.input  type_cmp.cpp  type_cmp.hpp  unsigned_property.hpp
old-irrelevant-stuff/lectures/lecture_4_ptrargs/: ptrargs.cpp  ptrargs.h
old-irrelevant-stuff/lesson_plan/: codehilite.css  lesson_11.cpp  lesson_plan.md
test/: BUILD  CMakeLists.txt  test_callable.cpp  test_dereferencable.cpp  test_dereferenceable.cpp  test_meta.cpp  test_minimal.cpp  test_type_erasure_movable.cpp
tests/: test_callable.cpp  test_dereferencable.cpp  test_type_erasure_movable.cpp
type_erasure/: meta.hpp  small_buffer.hpp  type_erasure.hpp  unique_storage_ptr.hpp
type_erasure/features/: callable.hpp  dereferencable.hpp  equality_comparable.hpp  less_than_comparable.hpp  ostreamable.hpp  regular.hpp  value_equality_comparable.hpp  visitable.hpp
